@@ -1,8 +1,6 @@
 TODO
     - Loftar map
         - follow camera + offset (akin to minimap)
-        - Map icons should scale with the map
-        - view range needs to scale with the map as well..
     - Party
         - Party members send grid id, offset every x seconds to override loftar's stuff? - Make this an option
     - Ability to make waypoints that you don't automatically go to, but can at a later date
