@@ -1,6 +1,7 @@
 3/3/19
     - Misc fix with Avatars
     - Minimap icons should all scale with zoom level
+    - Loftar map debug messages no longer print to system chat..
 
 3/2/19
     - Belts will now save window position
